--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/venky0195/TestJenkins#readme",
   "dependencies": {
+    "node-modules": "^1.0.1",
     "nodemon": "^1.18.10"
   }
 }
